# ridgeback

ridgeback_description/: CMakeLists.txt  package.xml
ridgeback_description/urdf/: ridgeback.urdf.xacro
